add button Take on Workorder
Enhance work order management and UI improvements

- Refactored `AddActivityForm.razor` to use async initialization and added workload calculation based on `TakeDate`.
- Updated `AppointmentEditor.razor` with new buttons for taking work orders and improved initialization logic.
- Improved state management and visual representation in `WorkOrderComponent.razor`.
- Enhanced navigation UI in `NavMenu.razor` with updated icons and styles.
- Introduced `WorkOrderTakeRequest` model in `RequestsModels.cs` for encapsulating work order data.
- Updated section titles in `Home.razor` for better localization.
- Updated localized strings in `UIStrings.Designer.cs` for better internationalization.
- Implemented `TakeWorkOrderAsync` method in `ApiServiceClient.cs` for handling work order requests.
- Added `CanHaveManyActiveTake` property in `UserState.cs` to manage user permissions.
- Introduced new endpoint for taking work orders in `WoController.cs` with validation.

--- a/BlazorTool.Client/Components/AddActivityForm.razor
+++ b/BlazorTool.Client/Components/AddActivityForm.razor
@@ -100,12 +100,12 @@
     private List<WODict> Categories { get; set; } = new List<WODict>();
     private string ErrorMessage { get; set; } = string.Empty;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         ActivityModel.WorkOrderID = WorkOrderID;
         ActivityModel.PersonID = UserState.PersonID ?? 0;
-
-        ActivityModel.WorkLoad = 0.25m; // Default workload
+        var WO = await ApiClient.GetWorkOrderByIdAsync(WorkOrderID);
+        ActivityModel.WorkLoad = CalculateDecimalHours(WO?.TakeDate);
         People = ApiClient.GetAllPersonsCached(); // From cache
         Categories = ApiClient.GetWOCategories(); // From cache
     }
@@ -131,6 +131,14 @@
             ErrorMessage = $"Error creating activity: {string.Join(", ", response.Errors)}";
             await OnActivityAdded.InvokeAsync(false);
         }
+    }
+
+    private decimal CalculateDecimalHours(DateTime? takeDate)
+    {
+        //if 15 minutes = 0.25 hours
+        if (takeDate == null) return 0;
+        var hours = (DateTime.Now - takeDate.Value).TotalHours;
+        return (decimal)hours;
     }
 
     private void OnCancelhandler()
