--- a/BlazorTool.Client/Components/AppointmentEditor.razor
+++ b/BlazorTool.Client/Components/AppointmentEditor.razor
@@ -3,6 +3,8 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Telerik.Blazor.Components.Scheduler.Models
 @inject AppointmentService ApptService
+@inject ApiServiceClient ApiService
+@inject UserState UserState
 @inject IStringLocalizer<Resources.UIStrings> Localizer
 
 <EditForm Model="@Appointment" OnValidSubmit="@SaveAppointment">
@@ -20,6 +22,11 @@
     {
         <TelerikButton OnClick="@CloseAppointment" ButtonType="ButtonType.Button" ThemeColor="@ThemeConstants.Button.ThemeColor.Warning">@Localizer["AppointmentEditor_FinishOrder"]</TelerikButton>
     }
+        @if (!isCurrentWOTakenByUser 
+        && (UserState.CanHaveManyActiveTake || !userHaveAnyTakenWorkOrders))
+        {
+            <TelerikButton OnClick="@OnTakeWorkOrder" ButtonType="ButtonType.Button">@Localizer["Take"]</TelerikButton>
+        }
     </div>
 </EditForm>
 <WorkOrderComponent WorkOrder="@Appointment" 
@@ -63,6 +70,9 @@
     private WorkOrderInfo? workOrderInfo = null; //additional information about the work order /wo/get?WorkOrderID=
     private bool isWOClosed = false;
     private bool isValidData = true;
+    private List<int> userTakenWorkOrdersID = new List<int>();
+    private bool userHaveAnyTakenWorkOrders = true;
+    private bool isCurrentWOTakenByUser = true;
 
     protected override async Task OnInitializedAsync()
     {
@@ -82,6 +92,9 @@
             isWOClosed = IsWOClosed();
         }
         string popupMessage = Localizer["AppointmentEditor_FillRequiredFields"];
+        userTakenWorkOrdersID = (await ApiService.GetWOTakenbyPerson(UserState.PersonID ?? 0)).ToList();
+        userHaveAnyTakenWorkOrders = userTakenWorkOrdersID.Any();
+        isCurrentWOTakenByUser = userTakenWorkOrdersID.Contains(Appointment?.WorkOrderID ?? 0);
     }
 
     async Task SaveAppointment()
@@ -189,4 +202,11 @@
 
         return true;
     }
+
+    private async Task OnTakeWorkOrder()
+    {
+        if (Appointment == null) return;
+        bool success = (await ApiService.TakeWorkOrderAsync(Appointment, UserState.PersonID ?? 0)).IsValid;
+    }
+
 }
